--- a/Random Users/Storyboard/Base.lproj/Main.storyboard
+++ b/Random Users/Storyboard/Base.lproj/Main.storyboard
@@ -16,13 +16,40 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="3lk-R7-j4U">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="44" id="3lk-R7-j4U" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3lk-R7-j4U" id="CKv-aH-AzK">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="383" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IU7-fE-SVh">
+                                            <rect key="frame" x="20" y="0.0" width="44" height="44"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="44" id="5ur-xV-aFo"/>
+                                                <constraint firstAttribute="width" constant="44" id="tmu-YZ-NEy"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ghi-Iw-how">
+                                            <rect key="frame" x="72" y="11.666666666666664" width="303" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="IU7-fE-SVh" firstAttribute="top" secondItem="CKv-aH-AzK" secondAttribute="top" id="0eg-yW-e2t"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Ghi-Iw-how" secondAttribute="trailing" id="3c9-wz-Cbi"/>
+                                        <constraint firstItem="Ghi-Iw-how" firstAttribute="centerY" secondItem="CKv-aH-AzK" secondAttribute="centerY" id="4n1-Zj-tev"/>
+                                        <constraint firstItem="IU7-fE-SVh" firstAttribute="leading" secondItem="CKv-aH-AzK" secondAttribute="leading" constant="20" id="VDN-eB-h1Z"/>
+                                        <constraint firstItem="Ghi-Iw-how" firstAttribute="leading" relation="lessThanOrEqual" secondItem="IU7-fE-SVh" secondAttribute="trailing" constant="8" id="WtB-3x-T7b"/>
+                                        <constraint firstAttribute="bottom" secondItem="IU7-fE-SVh" secondAttribute="bottom" id="sNj-Tx-lgZ"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="Ghi-Iw-how" id="uIM-6p-0Cf"/>
+                                    <outlet property="profileImage" destination="IU7-fE-SVh" id="R9k-ph-Pql"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -34,7 +61,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zbt-7k-XQe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="318" y="170"/>
+            <point key="canvasLocation" x="317.39130434782612" y="169.41964285714286"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Tsp-wQ-zkP">
