--- a/Random Users/Storyboards/Base.lproj/Main.storyboard
+++ b/Random Users/Storyboards/Base.lproj/Main.storyboard
@@ -24,8 +24,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="383" height="63"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h9x-wy-1wc">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.down.doc.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="h9x-wy-1wc">
                                             <rect key="frame" x="20" y="6.5" width="50" height="50"/>
+                                            <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="h9x-wy-1wc" secondAttribute="height" multiplier="1:1" id="OtP-nW-Nhn"/>
                                                 <constraint firstAttribute="height" constant="50" id="mWG-IX-Pp0"/>
@@ -145,6 +146,9 @@
             <point key="canvasLocation" x="137.68115942028987" y="106.47321428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="arrow.down.doc.fill" catalog="system" width="56" height="64"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="1Pk-RH-8VO"/>
     </inferredMetricsTieBreakers>
