--- a/Random Users/Storyboard/Base.lproj/Main.storyboard
+++ b/Random Users/Storyboard/Base.lproj/Main.storyboard
@@ -4,10 +4,11 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Users-->
         <scene sceneID="Y3n-zG-ivV">
             <objects>
                 <tableViewController id="wnz-1s-2Eg" customClass="UsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
@@ -26,8 +27,8 @@
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IU7-fE-SVh">
                                             <rect key="frame" x="20" y="0.0" width="44" height="44"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="44" id="5ur-xV-aFo"/>
-                                                <constraint firstAttribute="width" constant="44" id="tmu-YZ-NEy"/>
+                                                <constraint firstAttribute="width" constant="44" id="1FU-JT-n2u"/>
+                                                <constraint firstAttribute="width" secondItem="IU7-fE-SVh" secondAttribute="height" multiplier="1:1" id="jL1-ve-BIg"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ghi-Iw-how">
@@ -38,17 +39,18 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="IU7-fE-SVh" firstAttribute="top" secondItem="CKv-aH-AzK" secondAttribute="top" id="0eg-yW-e2t"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="Ghi-Iw-how" secondAttribute="trailing" id="3c9-wz-Cbi"/>
                                         <constraint firstItem="Ghi-Iw-how" firstAttribute="centerY" secondItem="CKv-aH-AzK" secondAttribute="centerY" id="4n1-Zj-tev"/>
-                                        <constraint firstItem="IU7-fE-SVh" firstAttribute="leading" secondItem="CKv-aH-AzK" secondAttribute="leading" constant="20" id="VDN-eB-h1Z"/>
-                                        <constraint firstItem="Ghi-Iw-how" firstAttribute="leading" relation="lessThanOrEqual" secondItem="IU7-fE-SVh" secondAttribute="trailing" constant="8" id="WtB-3x-T7b"/>
-                                        <constraint firstAttribute="bottom" secondItem="IU7-fE-SVh" secondAttribute="bottom" id="sNj-Tx-lgZ"/>
+                                        <constraint firstAttribute="bottom" secondItem="IU7-fE-SVh" secondAttribute="bottom" id="RnQ-4K-nC5"/>
+                                        <constraint firstItem="Ghi-Iw-how" firstAttribute="leading" secondItem="IU7-fE-SVh" secondAttribute="trailing" constant="8" id="aPM-1R-BkL"/>
+                                        <constraint firstItem="IU7-fE-SVh" firstAttribute="top" secondItem="CKv-aH-AzK" secondAttribute="top" id="gVB-u1-s1l"/>
+                                        <constraint firstItem="IU7-fE-SVh" firstAttribute="leading" secondItem="CKv-aH-AzK" secondAttribute="leading" constant="20" id="jG3-K8-0QI"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="nameLabel" destination="Ghi-Iw-how" id="uIM-6p-0Cf"/>
                                     <outlet property="profileImage" destination="IU7-fE-SVh" id="R9k-ph-Pql"/>
+                                    <segue destination="lA6-sV-32N" kind="show" identifier="ShowUserDetailSegue" id="qhC-D7-vXt"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -57,11 +59,68 @@
                             <outlet property="delegate" destination="wnz-1s-2Eg" id="nTR-PY-NY0"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="jpc-35-0jB"/>
+                    <navigationItem key="navigationItem" title="Users" id="jpc-35-0jB"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zbt-7k-XQe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="317.39130434782612" y="169.41964285714286"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="zYT-HR-roM">
+            <objects>
+                <viewController id="lA6-sV-32N" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SgU-AT-ne4">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Gxy-ya-cBp">
+                                <rect key="frame" x="20" y="201.33333333333334" width="374" height="493.33333333333326"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i6O-7O-tFc">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="374"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="i6O-7O-tFc" secondAttribute="height" multiplier="1:1" id="W0F-7W-dPF"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="aOq-1W-08k">
+                                        <rect key="frame" x="0.0" y="382" width="374" height="111.33333333333331"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wed-O8-Ypd">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="40.666666666666664"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yb7-uB-zRJ">
+                                                <rect key="frame" x="0.0" y="55.666666666666636" width="374" height="20.333333333333336"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SJT-A9-79x">
+                                                <rect key="frame" x="0.0" y="91" width="374" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="pYX-UG-1iP" firstAttribute="trailing" secondItem="Gxy-ya-cBp" secondAttribute="trailing" constant="20" id="3iy-sh-dCA"/>
+                            <constraint firstItem="Gxy-ya-cBp" firstAttribute="centerY" secondItem="SgU-AT-ne4" secondAttribute="centerY" id="NGl-G6-YBh"/>
+                            <constraint firstItem="Gxy-ya-cBp" firstAttribute="leading" secondItem="pYX-UG-1iP" secondAttribute="leading" constant="20" id="b5i-si-VSS"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="pYX-UG-1iP"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="0xh-rO-gmg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fnk-1L-Gr5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1096" y="133"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Tsp-wQ-zkP">
